# sov-rollup-starter

./: .gitignore  Cargo.toml  Makefile  README.md  celestia_rollup_config.toml  constants.json  flake.nix  rollup_config.toml  rust-toolchain.toml  sov-rollup-starter.sh
.github/workflows/: nix.yaml  rust.yaml  rust.yml
automation/: KEYGEN.md  MOCK_README.md  README.md  preconditions.yaml  setup.yaml
automation/roles/common/defaults/: main.yaml
automation/roles/common/tasks/: chrony.yaml  deps.yaml  dirs.yaml  disks.yaml  docker.yaml  governor.yaml  main.yaml  node_exporter.yaml  prometheus_agent.yaml  swap.yaml  tuner.yaml  user.yaml
automation/roles/common/templates/: prometheus.yml.j2
automation/roles/data-availability/celestia/defaults/mainnet/: variables.yaml
automation/roles/data-availability/celestia/defaults/testnet/: variables.yaml
automation/roles/data-availability/celestia/tasks/: catchup.yaml  main.yaml
automation/roles/data-availability/defaults/: main.yaml
automation/roles/data-availability/defaults/testnet/: variables.yaml
automation/roles/data-availability/files/: config.toml
automation/roles/data-availability/tasks/: celestia.yaml  go.yaml  main.yaml
automation/roles/data-availability/templates/: celestia-lightd.service.j2
automation/roles/rollup/defaults/: main.yaml
automation/roles/rollup/defaults/mainnet/: variables.yaml
automation/roles/rollup/defaults/testnet/: variables.yaml
automation/roles/rollup/files/: rollup.service  rollup.sh
automation/roles/rollup/files/celestia_genesis/: bank.json  chain_state.json
automation/roles/rollup/tasks/: build.yaml  celestia_adapter.yaml  genesis.yaml  git.yaml  main.yaml  mock_adapter.yaml  namespace.yaml  nginx.yaml  rotate.yaml  service.yaml  service_stop.yaml
automation/roles/rollup/tasks/celestia/: da_adapter.yaml
automation/roles/rollup/tasks/mock/: da_adapter.yaml
automation/roles/rollup/templates/: celestia_rollup_config.toml.j2  rollup.sh.j2  sequencer_registry.json.j2
automation/roles/rollup/templates/celestia/: rollup_config.toml.j2
automation/roles/rollup/templates/mock/: rollup_config.toml.j2
crates/provers/risc0/: build.rs
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/rollup/: Cargo.toml  Makefile
crates/rollup/src/: celestia_rollup.rs  mock_rollup.rs
crates/rollup/tests/: test_helpers.rs
crates/rollup/tests/bank/: mod.rs
crates/stf/: Cargo.toml
crates/stf/src/: authentication.rs  genesis_config.rs  hooks.rs  lib.rs  runtime.rs
nix/: rollup.nix
test-data/genesis/celestia/: bank.json  chain_state.json  prover_incentives.json  sequencer_registry.json
test-data/genesis/mock/: accounts.json  sequencer_registry.json
test-data/requests/: create_token.json  ibc_create_client.json  ibc_update_client.json  mint.json
