[workspace]

resolver = "2"

members = [
    "crates/rollup",
    "crates/stf"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.73"

[workspace.dependencies]
sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-accounts = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-bank = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-ledger-apis = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-prover-incentives = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-sequencer-registry = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-modules-rollup-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-stf-runner = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-db = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-sequencer = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-risc0-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-first-read-last-write-cache = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-cli = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-mock-da = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-celestia-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-prover-storage-manager = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
sov-kernels = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "85b79fa8b0752fdacb95ca57affdcef541ff799b" }
stf-starter = { path = "./crates/stf" }

axum = { version = "0.7", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
prometheus = "0.13.3"

anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
tracing = "0.1.40"
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
tempfile = "3.5"
jsonrpsee = { version = "0.22.5", features = ["jsonrpsee-types"] }

risc0-build = "0.20"
