[workspace]

resolver = "2"

members = [
    "crates/rollup",
    "crates/stf"
]

exclude = [
    "vendor/sovereign-sdk",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.73"

[workspace.dependencies]
sov-modules-api = { version = "0.3.0" }
sov-state = { version = "0.3.0" }
sov-accounts = { version = "0.3.0" }
sov-bank = { version = "0.3.0" }
sov-ledger-apis = { version = "0.3.0" }
sov-prover-incentives = { version = "0.3.0" }
sov-sequencer-registry = { version = "0.3.0" }
sov-modules-stf-blueprint = { version = "0.3.0" }
sov-modules-rollup-blueprint = { version = "0.3.0" }
sov-stf-runner = { version = "0.3.0" }
sov-db = { version = "0.3.0" }
sov-sequencer = { version = "0.3.0" }
sov-rollup-interface = { version = "0.3.0" }
sov-risc0-adapter = { version = "0.3.0" }
sov-mock-zkvm = { version = "0.3.0" }
sov-cli = { version = "0.3.0" }
sov-mock-da = { version = "0.3.0" }
sov-celestia-adapter = { version = "0.3.0" }
sov-prover-storage-manager = { version = "0.3.0" }
sov-kernels = { version = "0.3.0" }
sov-capabilities = { version = "0.3.0" }

sov-ibc                         = { version = "0.1.0" }
sov-ibc-transfer                = { version = "0.1.0" }
sov-consensus-state-tracker     = { version = "0.1.0" }

stf-starter = { path = "./crates/stf" }

axum = { version = "0.7", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
prometheus = "0.13.3"

anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
tracing = "0.1.40"
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
tempfile = "3.5"
jsonrpsee = { version = "0.22.5", features = ["jsonrpsee-types"] }

risc0-build = "0.20"

[patch.crates-io]
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }
ibc-app-transfer            = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }
ibc-primitives              = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }
ibc-query                   = { git = "https://github.com/cosmos/ibc-rs.git", rev = "67841b3c" }

sov-ibc                     = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "b74f6eb"  }
sov-ibc-transfer            = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "b74f6eb"  }
sov-celestia-client         = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "b74f6eb"  }
sov-consensus-state-tracker = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "b74f6eb"  }

sov-modules-api                 = { path = "./vendor/sovereign-sdk/module-system/sov-modules-api" }
sov-state                       = { path = "./vendor/sovereign-sdk/module-system/sov-state" }
sov-accounts                    = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-accounts" }
sov-bank                        = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-ledger-apis                 = { path = "./vendor/sovereign-sdk/full-node/sov-ledger-apis" }
sov-prover-incentives           = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-prover-incentives" }
sov-sequencer-registry          = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-sequencer-registry" }
sov-modules-stf-blueprint       = { path = "./vendor/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-modules-rollup-blueprint    = { path = "./vendor/sovereign-sdk/module-system/sov-modules-rollup-blueprint" }
sov-stf-runner                  = { path = "./vendor/sovereign-sdk/full-node/sov-stf-runner" }
sov-db                          = { path = "./vendor/sovereign-sdk/full-node/sov-db" }
sov-sequencer                   = { path = "./vendor/sovereign-sdk/full-node/sov-sequencer" }
sov-rollup-interface            = { path = "./vendor/sovereign-sdk/rollup-interface" }
sov-risc0-adapter               = { path = "./vendor/sovereign-sdk/adapters/risc0" }
sov-mock-zkvm                   = { path = "./vendor/sovereign-sdk/adapters/mock-zkvm" }
sov-cli                         = { path = "./vendor/sovereign-sdk/module-system/sov-cli" }
sov-prover-storage-manager      = { path = "./vendor/sovereign-sdk/full-node/sov-prover-storage-manager" }
sov-kernels                     = { path = "./vendor/sovereign-sdk/module-system/sov-kernels" }
sov-celestia-adapter            = { path = "./vendor/sovereign-sdk/adapters/celestia" }
sov-mock-da                     = { path = "./vendor/sovereign-sdk/adapters/mock-da" }
sov-capabilities                = { path = "./vendor/sovereign-sdk/module-system/sov-capabilities" }

crypto-bigint                   = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0"}
jmt                             = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }
