[package]
name = "stf-starter"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

[dependencies]
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-bank = { workspace = true }
sov-ibc = { workspace = true, features = ["serde"] }
sov-ibc-transfer = { workspace = true }
sov-sequencer-registry = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-stf-runner = { workspace = true }
sov-sequencer = { workspace = true, optional = true }
sov-rollup-interface = { workspace = true }
sov-capabilities = { workspace = true }
sov-prover-incentives = { workspace = true }
tracing = "0.1.37"

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
jsonrpsee = { workspace = true, features = ["jsonrpsee-types"], optional = true }
borsh = { workspace = true, features = ["rc", "bytes"] }
clap = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[features]
default = []
native = [
    "sov-modules-api/native",
    "sov-accounts/native",
    "sov-bank/native",
    "sov-ibc/native",
    "sov-ibc-transfer/native",
    "sov-sequencer-registry/native",
	"sov-rollup-interface/native",
	"sov-state/native",
    "sov-modules-stf-blueprint/native",
    "sov-stf-runner/native",
    "jsonrpsee",
    "sov-sequencer",
    "clap",
    "tokio"
]

