[package]
name = "sov-demo-prover-guest-celestia"
version = "0.3.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = "1.0.68"
ahash = "=0.8.6" # Force ahash to an old version to prevent build issues: https://github.com/risc0/risc0/issues/1406. This can be removed once risc0 updates to rust 1.72
time-macros = "=0.2.15" # Same as above

risc0-zkvm = { version = "0.20", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.20"

stf-starter = { path = "../../../stf" }

sov-rollup-interface        = { version = "0.3.0" }
sov-celestia-adapter        = { version = "0.3.0" }
sov-modules-api             = { version = "0.3.0" }
sov-modules-stf-blueprint   = { version = "0.3.0" }
sov-risc0-adapter           = { version = "0.3.0" }
sov-state                   = { version = "0.3.0" }
sov-mock-zkvm               = { version = "0.3.0" }
sov-kernels                 = { version = "0.3.0" }

[patch.crates-io]
sha2            = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek   = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1" }
crypto-bigint   = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }

sov-bank                        = { path = "../../../../vendor/sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-chain-state                 = { path = "../../../../vendor/sovereign-sdk/module-system/module-implementations/sov-chain-state" }
sov-modules-api                 = { path = "../../../../vendor/sovereign-sdk/module-system/sov-modules-api" }
sov-state                       = { path = "../../../../vendor/sovereign-sdk/module-system/sov-state" }
sov-rollup-interface            = { path = "../../../../vendor/sovereign-sdk/rollup-interface" }
sov-celestia-adapter            = { path = "../../../../vendor/sovereign-sdk/adapters/celestia" }
sov-modules-stf-blueprint       = { path = "../../../../vendor/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-risc0-adapter               = { path = "../../../../vendor/sovereign-sdk/adapters/risc0" }
sov-kernels                     = { path = "../../../../vendor/sovereign-sdk/module-system/sov-kernels" }
sov-mock-zkvm                   = { path = "../../../../vendor/sovereign-sdk/adapters/mock-zkvm" }

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
