[workspace]

[package]
name = "guest-mock-starter"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.68"
ahash = "=0.8.6" # Force ahash to an old version to prevent build issues: https://github.com/risc0/risc0/issues/1406. This can be removed once risc0 updates to rust 1.72
time-macros = "=0.2.15"
risc0-zkvm = { version = "0.20", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.20"

serde = { version = "1.0.188", features = ["derive", "rc"] }


sov-rollup-interface = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }
sov-mock-da = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }
sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }
sov-risc0-adapter = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }
sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }
sov-mock-zkvm = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }
sov-kernels = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git", rev = "4c609117a61783527129f3fd87cff2590c2c9fd1" }

stf-starter = { path = "../../../stf" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
