[workspace]

[package]
name = "guest-mock-starter"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.68"
ahash = "=0.8.6" # Force ahash to an old version to prevent build issues: https://github.com/risc0/risc0/issues/1406. This can be removed once risc0 updates to rust 1.72
time-macros = "=0.2.15"
risc0-zkvm = { version = "0.20", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.20"

serde = { version = "1.0.188", features = ["derive", "rc"] }

sov-rollup-interface        = { version = "0.3.0" }
sov-mock-da                 = { version = "0.3.0" }
sov-modules-stf-blueprint   = { version = "0.3.0" }
sov-modules-api             = { version = "0.3.0" }
sov-risc0-adapter           = { version = "0.3.0" }
sov-state                   = { version = "0.3.0" }
sov-mock-zkvm               = { version = "0.3.0" }
sov-kernels                 = { version = "0.3.0" }

stf-starter = { path = "../../../stf" }

[patch.crates-io]
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs.git", branch = "rano/allow-country-party-client-state-wrapper" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs.git", branch = "rano/allow-country-party-client-state-wrapper" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs.git", branch = "rano/allow-country-party-client-state-wrapper" }
ibc-app-transfer            = { git = "https://github.com/cosmos/ibc-rs.git", branch = "rano/allow-country-party-client-state-wrapper" }
ibc-primitives              = { git = "https://github.com/cosmos/ibc-rs.git", branch = "rano/allow-country-party-client-state-wrapper" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs.git", branch = "rano/allow-country-party-client-state-wrapper" }

sov-ibc                     = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "90591e5"  }
sov-ibc-transfer            = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "90591e5"  }
sov-celestia-client         = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "90591e5"  }

sov-modules-api                 = { path = "../../../../vendor/sovereign-sdk/module-system/sov-modules-api" }
sov-state                       = { path = "../../../../vendor/sovereign-sdk/module-system/sov-state" }
sov-accounts                    = { path = "../../../../vendor/sovereign-sdk/module-system/module-implementations/sov-accounts" }
sov-bank                        = { path = "../../../../vendor/sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-sequencer-registry          = { path = "../../../../vendor/sovereign-sdk/module-system/module-implementations/sov-sequencer-registry" }
sov-capabilities                = { path = "../../../../vendor/sovereign-sdk/module-system/sov-capabilities" }
sov-prover-incentives           = { path = "../../../../vendor/sovereign-sdk/module-system/module-implementations/sov-prover-incentives" }
sov-modules-stf-blueprint       = { path = "../../../../vendor/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-stf-runner                  = { path = "../../../../vendor/sovereign-sdk/full-node/sov-stf-runner" }
sov-rollup-interface            = { path = "../../../../vendor/sovereign-sdk/rollup-interface" }
sov-risc0-adapter               = { path = "../../../../vendor/sovereign-sdk/adapters/risc0" }
sov-mock-zkvm                   = { path = "../../../../vendor/sovereign-sdk/adapters/mock-zkvm" }
sov-kernels                     = { path = "../../../../vendor/sovereign-sdk/module-system/sov-kernels" }
sov-mock-da                     = { path = "../../../../vendor/sovereign-sdk/adapters/mock-da" }

sha2                            = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek                   = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1" }
crypto-bigint                   = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }
jmt                             = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
